@@ -1,8 +1,10 @@
 package io.github.raphaelmuniz.plansFy.services;
 
+import io.github.raphaelmuniz.plansFy.dto.req.AdicionarMembrosGrupoDTO;
 import io.github.raphaelmuniz.plansFy.dto.req.GrupoRequestDTO;
 import io.github.raphaelmuniz.plansFy.dto.res.GrupoResponseDTO;
 import io.github.raphaelmuniz.plansFy.entities.*;
+import io.github.raphaelmuniz.plansFy.entities.enums.DificuldadeEnum;
 import io.github.raphaelmuniz.plansFy.entities.enums.StatusEntregaEnum;
 import io.github.raphaelmuniz.plansFy.repositories.*;
 import io.github.raphaelmuniz.plansFy.exceptions.NotFoundException;
@@ -10,6 +12,7 @@ import io.github.raphaelmuniz.plansFy.services.generic.GenericCrudServiceImpl;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -78,30 +81,43 @@ public class GrupoService extends GenericCrudServiceImpl<GrupoRequestDTO, GrupoR
         return new GrupoResponseDTO(grupoAtualizado);
     }
 
+    @Transactional
+    public void adicionarIntegrantes(AdicionarMembrosGrupoDTO data) {
+        Grupo grupo = repository.findById(data.getGrupoId()).orElseThrow(() -> new NotFoundException("Grupo não encontrado."));
+        data.getIntegrantesId().forEach(intId -> {
+            Assinante assinanteEncontrado = assinanteRepository.findById(intId).orElseThrow(() -> new NotFoundException("Integrante não encontrado."));
+            InscricaoGrupo inscricaoGrupo = new InscricaoGrupo(null, grupo, assinanteEncontrado, LocalDateTime.now(), "Padrão");
+            inscricaoGrupoRepository.save(inscricaoGrupo);
+        });
+    }
 
-//    @Transactional
-//    public void adicionarAluno(@RequestBody @Valid EstudanteEmGrupoRequestDTO data) {
-//        Grupo grupoEncontrado = findById(data.getGrupoId()).toModel();
-//        Estudante estudanteEncontrado = assinanteRepository.findById(data.getAlunoId()).orElseThrow(() -> new NotFoundException("Aluno não encontrado."));
-//
-//        if (!grupoEncontrado.getEstudantes().contains(estudanteEncontrado)) {
-//            grupoEncontrado.getEstudantes().add(estudanteEncontrado);
-//            repository.save(grupoEncontrado);
-//        }
-//    }
-//
-//    @Transactional
-//    public void removerAluno(@RequestBody @Valid EstudanteEmGrupoRequestDTO data) {
-//        Grupo grupoEncontrado = findById(data.getGrupoId()).toModel();
-//        Estudante estudanteEncontrado = assinanteRepository.findById(data.getAlunoId()).orElseThrow(() -> new NotFoundException("Aluno não encontrado."));
-//
-//        if (grupoEncontrado.getEstudantes().contains(estudanteEncontrado)) {
-//            grupoEncontrado.getEstudantes().remove(estudanteEncontrado);
-//            repository.save(grupoEncontrado);
-//        }
-//    }
-//
-//    public List<GrupoResponseDTO> findGruposByAlunoId(String alunoId) {
-//        return repository.findByInscritos_Id(alunoId).stream().map(GrupoResponseDTO::new).collect(Collectors.toList());
-//    }
+    @Transactional
+    public void removerIntegrantes(List<String> integrantesId, String grupoId) {
+        Grupo grupo = repository.findById(grupoId).orElseThrow(() -> new NotFoundException("Grupo não encontrado."));
+        integrantesId.forEach(intId -> {
+            InscricaoGrupo inscricaoEncontrada = inscricaoGrupoRepository.findByGrupoIdAndAssinanteId(grupo.getId(), intId).orElseThrow(() -> new NotFoundException("Inscrição não encontrada."));
+            inscricaoGrupoRepository.delete(inscricaoEncontrada);
+        });
+    }
+
+    public List<Assinante> listarMembros(String grupoId) {
+        Grupo grupo = repository.findById(grupoId).orElseThrow(() -> new NotFoundException("Grupo não encontrado."));
+        List<Assinante> membros = grupo.getInscritos().stream().map(InscricaoGrupo::getInscrito).toList();
+        return membros;
+    }
+
+    @Transactional
+    public void atribuirAtividadesAoGrupo(String grupoId, List<String> atividadesModeloId) {
+        Grupo grupo = repository.findById(grupoId).orElseThrow(() -> new NotFoundException("Grupo não encontrado."));
+        atividadesModeloId.forEach(atvModeloId -> {
+            AtividadeModelo atividadeModelo = atividadeModeloRepository.findById(atvModeloId).orElseThrow(() -> new NotFoundException("Atividade modelo não encontrada."));
+            AtividadeCopia atividadeCopia = new AtividadeCopia(atividadeModelo.getDataLancamento(), atividadeModelo.getPrazoEntrega(), atividadeModelo.getTitulo(), atividadeModelo.getDescricao(), atividadeModelo.getDificuldade(), atividadeModelo.getDisciplina(), null, StatusEntregaEnum.PENDENTE, grupo, null);
+            atividadeCopiaRepository.save(atividadeCopia);
+        });
+    }
+
+    public List<AtividadeCopia> listarAtividadesDoGrupo(String grupoId) {
+        Grupo grupo = repository.findById(grupoId).orElseThrow(() -> new NotFoundException("Grupo não encontrado."));
+        return grupo.getAtividades();
+    }
 }
